--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,34 +12,47 @@ source:
 
 build:
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
-  noarch: python
+  Skip: True  # [py<38]
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation --ignore-installed --no-cache-dir -vv
 
 requirements:
   host:
     - pip
-    - python >=3.8
+    - python
+    - wheel
   run:
-    - __{{ target_os }}
-    {% if target_os == 'win' %}
-    - ansicon
-    {% endif %}
-    - python >=3.8
+    - ansicon  # [win]
+    - python
 
 test:
+  source_files:
+    - tests
   imports:
     - jinxed
     - jinxed.terminfo
   commands:
     - pip check
+    - pytest -vv tests  # [py<311]
+    # seems from the tests that jinxed 1.2.0 does not support well compability tests 
+    # with ncurses >= 6.3, ncurses < 6.3 is not available for py>=311
+    - pytest -k "not test_tparm.py" -vv  # [py>=311]
   requires:
     - pip
+    - pytest
+    - ncurses <6.3 # [py<311]
+
 
 about:
   home: https://pypi.org/project/jinxed/
   summary: Jinxed Terminal Library
+  description: | 
+    Jinxed is an implementation of a subset of the Python curses library. It provides pure Python implementations of 
+    terminfo functions such as tigetstr() and tparm() as well as convenience methods for working with Windows terminals.
+  license_family: OTHER
   license: MPL-2.0
   license_file: LICENSE
+  doc_url: https://jinxed.readthedocs.io/en/stable/
+  dev_url: https://github.com/Rockhopper-Technologies/jinxed/
 
 extra:
   recipe-maintainers:
